@@ -8,6 +8,7 @@
 
 2010-10-15 Steffen Kamper  <steffen@typo3.org>
 
+	* Fixed bug #15822: t3lib_beFunc use $this in static methods
 	* Fixed bug #15992: Bugfix: Incorrect default value of permalogin
 	* Fixed bug #15993: Bug: Felogin shouldn't show the permalogin form controls when permalogin is set to "forced on" in install tool
 
